force-app/main/default/objects/Desk_Account_Migration__c/Desk_Account_Migration__c.object-meta.xml
<CustomObject>
    <label>Desk Account Migration</label>
    <nameField>
        <displayFormat>DAcM-{0000000000}</displayFormat>
        <label>Desk Account Migration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Desk Account Migrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>