force-app/main/default/objects/Desk_Account_Migration__c/fields/created_at__c.field-meta.xml
<CustomField>
    <fullName>created_at__c</fullName>
    <label>Created At</label>
    <type>DateTime</type>
</CustomField>