force-app/main/default/objects/Desk_Account_Migration__c/fields/custom_support_start_date__c.field-meta.xml
<CustomField>
    <fullName>custom_support_start_date__c</fullName>
    <label>Support Start Date</label>
    <type>DateTime</type>
</CustomField>