force-app/main/default/objects/Desk_Account_Migration__c/fields/DESKSCMT_AccountId__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_AccountId__c</fullName>
    <label>AccountId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>