force-app/main/default/objects/Desk_Account_Migration__c/fields/DESKSCMT_created_at_for_audit__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_created_at_for_audit__c</fullName>
    <label>Created At For Audit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>