force-app/main/default/objects/Desk_Account_Migration__c/fields/DESKSCMT_error__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_error__c</fullName>
    <label>Error</label>
    <type>TextArea</type>
</CustomField>