force-app/main/default/objects/Desk_Account_Migration__c/fields/DESKSCMT_Name__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Name__c</fullName>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>