force-app/main/default/objects/Desk_Account_Migration__c/fields/Domains__c.field-meta.xml
<CustomField>
    <fullName>Domains__c</fullName>
    <label>Domains</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>